Made the elements on dataset.html fixed on horizontal scroll

--- a/form.css
+++ b/form.css
@@ -2,12 +2,14 @@ body {
   background-color: #d1ccc0;
   font-family: 'Oswald', sans-serif;
   font-size: 14px;
+  margin-bottom: 3%;
 }
 
 img {
   margin: 35px 4%;
   width: 14%;
   height: auto;
+  position: fixed;
 }
 
 h1 {
@@ -83,30 +85,32 @@ input[type=submit]:hover {
   padding: 20px;
   font-family: 'Oswald', sans-serif;
   text-decoration: none;
+  position: fixed;
+  left: 93%;
 }
 
 #help:hover {
   text-decoration: underline;
 }
 
-#data-set-name {
-  margin: 25px 37%;
-  margin-bottom: 10px;
-}
-
-#data-file-name {
-  font-size: 15px;
-  font-family: 'Oswald', sans-serif;
-  margin: 0 42%;
-  margin-bottom: 25px;
-  font-weight: lighter;
-}
-
-#button-div {
+#header-container {
+  margin-top: 5%;
   align-items: center;
+  font-family: 'Oswald', sans-serif;
   width: 100%;
   display: inline-block;
-  margin-top: 3%;
+  position: fixed;
+  top: 5%;
+  left: 0;
+  right: 0;
+}
+
+#button-container {
+  align-items: center;
+  width: 100%;
+  display: inline-flex;
+  left: 35%;
+  position: fixed;
 }
 
 #download-csv {
@@ -118,6 +122,8 @@ input[type=submit]:hover {
   border-radius: 4px;
   cursor: pointer;
   font-size:20px;
+  z-index: 1;
+  position: relative !important;
 }
 
 #download-csv:hover {
@@ -135,10 +141,22 @@ border-radius: 4px;
 cursor: pointer;
 font-size:20px;
 margin-right: 40px;
+z-index: 1;
+position: relative !important;
+}
+
+#restart:hover {
+  background-color: #1C316C;
+  transition: 0.4s;
 }
 
 #sub-div {
   text-align: center;
   display: inline-block;
   width: 100%;
+}
+
+#spreadsheet {
+  margin-bottom: 3%;
+  margin-top: 20%;
 }
